--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+x11proto-gl (1.4.17-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Julien Cristau <jcristau@debian.org>  Wed, 11 Dec 2013 22:10:29 +0100
+
+x11proto-gl (1.4.16-2) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Julien Cristau <jcristau@debian.org>  Sun, 09 Jun 2013 14:42:02 +0200
+
+x11proto-gl (1.4.16-1) experimental; urgency=low
+
+  [ Maarten Lankhorst ]
+  * New upstream release.
+
+ -- Julien Cristau <jcristau@debian.org>  Sat, 14 Jul 2012 15:49:10 +0200
+
 x11proto-gl (1.4.15-1) unstable; urgency=low
 
   * New upstream release.
